<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="madbomberlabs.com.mathtest.MainActivity">

<!-- Skill Level -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/skillLvl"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/rgSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/rbEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/easy"
            android:checked="true"
            android:onClick="goSkill" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/med"
            android:onClick="goSkill" />

        <RadioButton
            android:id="@+id/rbHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/hard"
            android:onClick="goSkill" />

    </RadioGroup>

<!-- Math Operations -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mathOperation"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/rgOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/rbAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/addition"
            android:onClick="goOperator" />

        <RadioButton
            android:id="@+id/rbSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/subtraction"
            android:onClick="goOperator" />

        <RadioButton
            android:id="@+id/rbMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/multiplication"
            android:onClick="goOperator" />

        <RadioButton
            android:id="@+id/rbDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/division"
            android:onClick="goOperator" />

        <RadioButton
            android:id="@+id/rbRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/randomOperator"
            android:checked="true"
            android:onClick="goOperator" />

    </RadioGroup>

<!-- Math Problem -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvInt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvOperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvInt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/equals"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etAns"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/ansDefault"
            android:textAllCaps="false" />

    </LinearLayout>

    <!-- Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:onClick="goClose"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:text="@string/btnNext"
            android:onClick="goNext"
            android:textSize="20sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="goCheck"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_margin="10sp"
            android:id="@+id/imgSmiley" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAns"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvIncorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAns"
                android:textSize="20sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/test"/>

    </LinearLayout>


</LinearLayout>
